--- a/Rmd/manuscript.Rmd
+++ b/Rmd/manuscript.Rmd
@@ -123,36 +123,18 @@ theme_set(
 # Introduction
 
 
-Humans are able to recognise spoken words without much effort, even in adverse conditions such as compressed speech [@de1982relationship] or the loss of segmental information [@warren1970perceptual]. But even in the most ideal of the situations, the cognitive processes engaged in word recognition do not occur without uncertainty. The speech input activates multiple candidate lexical representations based on their similarity with the signal, and for word recognition to take place, one of the candidates must be selected. There is extensive literature about the influence on word recognition of the number of lexical candidates, their frequency, and their  phonological and semantic similarity with target words. Less is known about how all these factors affect the dynamics of word recognition in non-native languages.
+Even for highly proficient bilinguals, listening to non-native speech is more costly than listening to native speech [@lecumberri2010non]. One of the sources of this increased difficulty stems from the potential mismatch between the phonology of the native and the non-native languages: some acoustic features embedded in the non-native speech signal may not overlap perfectly with any phonemic category in the listener's native language. For example, a Spanish native listening to French may encounter the word /pɔʁt/ (*porte*), translation of *door* in French. The voiced uvular fricative consonant /ʁ/ and the open-mid back rounded vowel /ɔ/ do not exist in Spanish. This mismatch at the phonological level increases the uncertainty under which lexical selection takes place during word recognition. Yet, non-native listeners--even those with low proficiency--are rarely completely naïve to the language they are listening to. All languages share, to some extent, similarities at the lexical level, frequently due to their typological closeness, and these similarities can be exploited by non-native listeners to process the speech signal. In the present research we investigate the extent to which adult listeners rely on this similarity during lexical access, and we do so capitalising on the role of *cognates*.
 
 
-Listening to speech in a non-native language is more costly than doing so in native languages, regardless of the level of proficiency [@lecumberri2010non]. The source of this increased cognitive effort is likely to originate at multiple levels. For example, some sounds in the speech signal do not correspond to any phoneme in the native language, making the process of matching sounds to phonemes complicated. This is the case of a Spanish native listening to words containing the guttural /ʁ/ in French. Language learners, however, are rarely completely naïve to the language they are listening to. All languages share, to some extent, similarities, frequently due to their typological closeness. These similarities which can be exploited by non-native listeners to process the speech signal. In the present research we investigate the extent to which adult listeners rely on phonological similarity between cross-language synonyms during word translation.
+Cognates are cross-language synonyms whose form (e.g., phonology, orthography, sign) is similar. The source of such similarity is frequently attributed to a shared etymological origin. Romance languages such as Spanish and Catalan share many cognates [@schepens2012distributions], as in the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively)^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish), share their phonological onset, but their etymology points to different origins. We will use the word *cognateness* to include all form-similar cross-language synonyms for simplicity. It is highly implausible that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.]. Cognates play a pivotal role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. For example, pictures are named faster by Spanish-Catalan bilinguals when their associated labels in both languages are cognates (e.g., *puerta*-*porta*), compared to when their labels are non-cognates (*mesa*-*taula*, *table* in Spanish and Catalan) [@costa2000cognate]. This cognate advantage is not restricted to production, but rather extends to word recognition [@thierry2007brain; @midgley2011effects], word learning [@de2000hard; @lotto1998effects; @valente2018does], and word translation [@christoffels2006memory].
 
 
-
-Cognates are cross-language synonyms whose form (e.g., phonology, orthography, signature) is similar. The cause of such similarity is frequently attributed to a shared etymological origin. Romance languages such as Spanish and Catalan share many cognates [@schepens2012distributions], as in the case of *puerta* and *porta* (*door* in Spanish and Catalan, respectively)^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish), share their phonological onset, but their etymology points to different origins. We will use the word *cognateness* to include all form-similar cross-language synonyms for simplicity. It is highly implausible that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.].
-
+Early theoretical accounts of this phenomenon pointed that the impact of cognateness on lexical processing is dependent on bilinguals' proficiency in their second language (L2) [@potter1984lexical; see @chen1989patterns for converging evidence]. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on the mediation of L1 representations. The Revised Hierarchical Model [RHM, @kroll1994category] captured this hypothesis and predicted that translating words from L1 to L2 (*forward* translation) should take longer than translating from L2 to L1 (*backward* translation). The rationale behind this prediction is that backward translation relies more strongly on direct word-word links between L1 and L2 representations, whereas forward translation relies more strongly on the mediation between the concept and the two word forms. One of the consequences of this prediction is that backward translation should be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words during backward translation.
 
 
-Cognates play a major role in virtually all models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. During word production and comprehension, lexical representations of both languages are activated, and the form similarity between both impacts bilinguals' performance in naming or lexical decision tasks [e.g., @costa2000cognate; @thierry2007brain]. In a seminal study, @costa2000cognate asked Spanish-Catalan adult bilinguals to name pictures in Spanish. Unbeknownst to participants, half of the labels associated to pictures were cognates in Spanish and Catalan (e.g., *puerta*-*porta*) while the other half were non-cognates (e.g., *mesa*-*taula*, meaning *table* in Spanish and Catalan). Surprisingly, Spanish-Catalan bilinguals named cognate pictures faster than non-cognate pictures, while Spanish monolinguals did not show this effect. This suggests that bilinguals activate the picture's word representations in both languages, and the phonological overlap between both labels facilitated the naming process. Additionally, cognates seem to be learnt more easily in L2 than non-cognates. @de2000hard presented Dutch natives pairs of Dutch words and pseudowords. Participants' performance learnt and retained better pairs with high orthographic similarity than pairs with low orthographic similarity [see also @lotto1998effects for Dutch natives learning Italian words].
+To test these predictions, @degroot1994forward and @de1992determinants asked Dutch natives with high (yet non-native) English proficiency to translate words from either Dutch to English (forward translation, L1 to L2) or from English to Dutch (backward translation, L2 to L1). Participants were presented with written words in English or Dutch, and asked to speak out loud their translation in the other language as fast as possible. Results showed that translation times and accuracy were roughly equivalent  in forward and backward translation, and that semantic variables (e.g., concreteness) were positively associated with participants' performance, especially in the forward translation condition. Cognates were translated equally fast in both conditions, but non-cognates were translated faster during backward than forward translation, and translation of cognates was less affected  by semantic variables than non-cognates. These findings suggest that both conceptually-mediated and direct translation routes are active during translation, although backward translation relies more strongly on direct links between L1 and L2 representations, which makes it more sensitive to cognateness (than forward translation). Interestingly, higher-proficiency bilinguals tested in the same task showed similar results. However, subsequent studies did not find differences in participant's performance during forward and backward translation, or even found better performances in forward translation [@christoffels2006memory; @christoffels2013language], contrary to the predictions of the RHM. Further models built upon this model, introducing a wider range of connections in their theorised lexica. 
 
-
-
-Cognates are not only learnt faster than non-cognates, but translated faster too. Early accounts of bilingual lexical access suggest that low-proficiency learners first established links between newly acquired words in L2 and their meanings through their L1 translation equivalents [@potter1984lexical]. As learners become more proficient, the connection between L2 representations and their meaning grows stronger, and L2 word processing becomes less reliant on the mediation of L1 representations. The Revised Hierarchical Model [RHM,   @kroll1994category] captured this assumption and predicted that translating words from L1 to L2 (forward translation) should take longer than translating from L2 to L1 (backward translation). The rationale behind this prediction is that backward translation relies more strongly on direct word-word links between L1 and L2 representations, while forward translation would rely more strongly on the mediation between the concept and the two word forms. One of the consequences of this prediction is that backward translation should be more sensitive to the form similarity between the L1 and the L2 representations: cognate words should be retrieved faster than non-cognate words during backward translation.
-
-
-To test these predictions, @degroot1994forward and @de1992determinants asked Dutch natives with high (yet non-native) English proficiency to translate words from either Dutch to English (forward translation, L1 to L2) or from English to Dutch (backward translation, L2 to L1). Participants were presented with written words in English or Dutch, and asked to speak out loud their translation in the other language as fast as possible. Results who that translation times and accuracy were roughly equivalent in across both forward and backward conditions, and that semantic variables (e.g., concreteness), were positively associated with participants' performance, especially in the forward translation condition. Cognates were translated equally fast in both conditions, but non-cognates were translated faster during backward than forward translation, and translation of cognates was less affected  by semantic variables than non-cognates. 
-
-These findings suggest that both conceptually mediated and direct translation routes are active during translation, although backward translation relies more strongly on direct links between L1 and L2 representations, which makes it more sensitive to cognateness (than forward translation). Interestingly, higher-proficiency bilinguals tested in the same task showed similar results. However, subsequent studies did not find differences in participant's performance during forward and backward translation, or even found better performances in forward translation [@christoffels2006memory; @christoffels2013language], contrary to the predictions of the RHM. Further models build upon this model, introducing a wider range of connections in their theorised lexica.
-
-
-Since @kroll1994category proposed their RHM model, subsequent studies brought attention to the role of the network of connections that words establish with each other at the form-level (phonological or orthographic) or at the conceptual level. The Neighbourhood Activation Model [NAM, @luce1998recognizing] suggests that lexical selection is mediated not only by the lexical frequency of the target word (and the number of activated candidates), but also by the frequency of the candidates.
-
-
-Subsequent behavioural experiments [e.g., @luce1998recognizing] show that English adult participants were tested in a lexical decision task in which words were presented across several conditions of noise-to-signal ratio. A computerised lexicon calculated number and average lexical frequency of phonological neighbours around each of the presented words. Participants answered more faster and more accurately to high frequency words, and words from high density neighbourhoods were also responded detected more accurately, but slowly. Therefore, average lexical frequency of  neighbourhoods was associated to a decrease in accuracy. Low frequency words were in fact detected more accurately in low density than in high density neighbours. These findings suggested that both word lexical frequency and neighbourhood density can facilitate spoken word recognition, but this effect is modulated by the frequency of the neighbourhood; when phonological neighbours are more frequent, lexical selection is hindered [@goldinger1989priming; @luce1990similarity].
-
-
-The influence of phonological neighbourhoods and their structure on lexical processing poses rise important question in the field of bilingualism research. Do word representations in one language form part of the phonological or orthographic neighbours of the other language? The Bilingual Interactive Activation [BIA+; @van1998orthographic] proposes that lexical representations establish both excitatory and inhibitory connections with other representations from the same or the other language, forming an integrated lexicon for both languages [@mcclelland1981interactive]. Evidence supporting such integrated lexicon is provided by the fact that bilinguals' performance in word recognition tasks is sensitive to the orthographic neighbourhood density of the translation of the presented word. @van1998orthographic presented bilingual participants with words in only one language (target language) in a lexical decision task. When the translation of the presented word in the non-target language was part of a large neighbourhood, reaction times were slower. This provides evidence that the presented words activated orthographic neighbourhoods in the non-target language, which slowed down word recognition.
+Since the RHM model was proposed, later studies brought attention to the role of the network of connections that words establish with each other at the form-level (phonological or orthographic) or at the conceptual level. For instance, the Neighbourhood Activation Model [NAM, @luce1998recognizing] highlighted the fact that lexical selection is affected by the number of the phonological neighbours of the selected word. Words surrounded by a larger number of phonological neighbours (only differing in one phoneme from the target words) are responded more slowly and less accurately than words from sparser phonological neighbourhoods [@goldinger1989priming; @luce1990similarity], especially when such neighbours; lexical frequency is higher [@luce1998recognizing]. This finding poses an important question in the field of bilingualism research: do word representations in one language form part of the phonological or orthographic neighbours of the other language? The Bilingual Interactive Activation [BIA+, @van1998orthographic] proposes that lexical representations establish both excitatory and inhibitory connections with other representations from the same or the other language, forming an integrated lexicon for both languages [@mcclelland1981interactive]. Evidence supporting such integrated lexicon is provided by the fact that bilinguals' performance in word recognition tasks is sensitive to the orthographic neighbourhood density of the translation of the presented word. @van1998orthographic presented bilingual participants with words in only one language (target language) in a lexical decision task. When the translation of the presented word in the non-target language was part of a large neighbourhood, reaction times were slower. This provides evidence that the presented words activated orthographic neighbourhoods in the non-target language, which slowed down word recognition.
 
 
 
@@ -162,7 +144,7 @@ A more recent model of bilingual lexical processing is Multilink @dijkstra2019mu
 The fact that Multilink fitted the experimental data from @christoffels2006memory with remarkable success, even in absence of word-word connections between translation equivalents might put into question the necessity of such connections during translation, in favour of a simpler model in which backward translation relies exclusively on the association between L2 and L1 word forms via their shared concept. This claim, however, should be taken. It should be taken into account, however, that @christoffels2006memory only tested fairly balanced bilinguals (i.e., bilinguals with high proficiency in L2). Additionally, data generated from Multilink model assumed similar vocabulary sizes across languages and, perhaps more critically in this regard, that word-concept connections were equally strong for L1 and L2 representations. These conclusions should therefore be taken with caution when extended to unbalanced bilinguals. It is low-proficiency bilinguals whom the RHM model predicts strong reliance on word-word connections during translation, especially during backward translation. This prediction remains untested my Multilink.
 
 
-The role of this study was to investigate the plausibility of the lexical route as a mechanism exploited by monolingual adults during backward translation. Monolinguals can be considered a particular (extreme) case of unbalanced bilingualism, in which their vocabulary size in L2 is null, and word-concept connections are absent. In this case, monolinguals can only use the lexical route to suceeed in the translation task, and they can only do so by exploiting the cognateness of the words presented and their translation in the native language. If participants are able to translate words in L2, even with no knowledge of the language it belongs to, based on their form-similarity with the target word, this would suggest that the lexical route is in place for low-proficiency bilinguals. If participants are not able to translation words from L2 to L1 regardless of their form-similarity, this would suggest that low-proficiency bilinguals rely entirely on word-concept connections for backward translation.
+The role of this study was to investigate the plausibility of the lexical route as a mechanism exploited by monolingual adults during backward translation. Monolinguals can be considered a particular (extreme) case of unbalanced bilingualism, in which their vocabulary size in L2 is null, and word-concept connections are absent. In this case, monolinguals can only use the lexical route to succeed in the translation task, and they can only do so by exploiting the cognateness of the words presented and their translation in the native language. If participants are able to translate words in L2, even with no knowledge of the language it belongs to, based on their form-similarity with the target word, this would suggest that the lexical route is in place for low-proficiency bilinguals. If participants are not able to translation words from L2 to L1 regardless of their form-similarity, this would suggest that low-proficiency bilinguals rely entirely on word-concept connections for backward translation.
 
 
 # Methods
