--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -29,6 +29,47 @@
   year={2017}
 }
 
+@article{otwinowska2017more,
+  title={The more similar the better? Factors in learning cognates, false cognates and non-cognate words},
+  author={Otwinowska, Agnieszka and Szewczyk, Jakub M},
+  journal={International Journal of Bilingual Education and Bilingualism},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+@article{valente2018does,
+  title={Does phonological overlap of cognate words modulate cognate acquisition and processing in developing and skilled readers?},
+  author={Valente, Daniela and Ferr{\'e}, Pilar and Soares, Ana and Rato, Anabela and Comesa{\~n}a, Montserrat},
+  journal={Language Acquisition},
+  volume={25},
+  number={4},
+  pages={438--453},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+@article{chen1989patterns,
+  title={Patterns of lexical processing in a nonnative language.},
+  author={Chen, Hsuan-Chih and Leung, Yuen-Sum},
+  journal={Journal of Experimental Psychology: Learning, memory, and cognition},
+  volume={15},
+  number={2},
+  pages={316},
+  year={1989},
+  publisher={American Psychological Association}
+}
+
+@article{midgley2011effects,
+  title={Effects of cognate status on word comprehension in second language learners: An ERP investigation},
+  author={Midgley, Katherine J and Holcomb, Phillip J and Grainger, Jonathan},
+  journal={Journal of Cognitive Neuroscience},
+  volume={23},
+  number={7},
+  pages={1634--1647},
+  year={2011},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
  @Article{loo2014stringdist,
     title = {The stringdist package for approximate string matching},
     author = {M.P.J. {van der Loo}},
