--- a/Rmd/references.bib
+++ b/Rmd/references.bib
@@ -29,45 +29,70 @@
   year={2017}
 }
 
-@article{otwinowska2017more,
-  title={The more similar the better? Factors in learning cognates, false cognates and non-cognate words},
-  author={Otwinowska, Agnieszka and Szewczyk, Jakub M},
-  journal={International Journal of Bilingual Education and Bilingualism},
-  year={2017},
-  publisher={Taylor \& Francis}
+@article{wickham2019tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+
+@article{weber2004lexical,
+  title={Lexical competition in non-native spoken-word recognition},
+  author={Weber, Andrea and Cutler, Anne},
+  journal={Journal of memory and language},
+  volume={50},
+  number={1},
+  pages={1--25},
+  year={2004},
+  publisher={Elsevier}
 }
 
-@article{valente2018does,
-  title={Does phonological overlap of cognate words modulate cognate acquisition and processing in developing and skilled readers?},
-  author={Valente, Daniela and Ferr{\'e}, Pilar and Soares, Ana and Rato, Anabela and Comesa{\~n}a, Montserrat},
-  journal={Language Acquisition},
-  volume={25},
-  number={4},
-  pages={438--453},
-  year={2018},
-  publisher={Taylor \& Francis}
-}
-
-@article{chen1989patterns,
-  title={Patterns of lexical processing in a nonnative language.},
-  author={Chen, Hsuan-Chih and Leung, Yuen-Sum},
-  journal={Journal of Experimental Psychology: Learning, memory, and cognition},
-  volume={15},
+@article{best2001discrimination,
+  title={Discrimination of non-native consonant contrasts varying in perceptual assimilation to the listener’s native phonological system},
+  author={Best, Catherine T and McRoberts, Gerald W and Goodell, Elizabeth},
+  journal={The Journal of the Acoustical Society of America},
+  volume={109},
   number={2},
-  pages={316},
-  year={1989},
-  publisher={American Psychological Association}
+  pages={775--794},
+  year={2001},
+  publisher={Acoustical Society of America}
 }
 
-@article{midgley2011effects,
-  title={Effects of cognate status on word comprehension in second language learners: An ERP investigation},
-  author={Midgley, Katherine J and Holcomb, Phillip J and Grainger, Jonathan},
-  journal={Journal of Cognitive Neuroscience},
-  volume={23},
-  number={7},
-  pages={1634--1647},
-  year={2011},
-  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+@article{cutler2004patterns,
+  title={Patterns of English phoneme confusions by native and non-native listeners},
+  author={Cutler, Anne and Weber, Andrea and Smits, Roel and Cooper, Nicole},
+  journal={The Journal of the Acoustical Society of America},
+  volume={116},
+  number={6},
+  pages={3668--3678},
+  year={2004},
+  publisher={Acoustical Society of America}
+}
+
+@article{nabvelek1984perception,
+  title={Perception of consonants in reverberation by native and non-native listeners},
+  author={N{\'a}b{\v{e}}lek, Anna K and Donahue, Amy M},
+  journal={The Journal of the Acoustical Society of America},
+  volume={75},
+  number={2},
+  pages={632--634},
+  year={1984},
+  publisher={Acoustical Society of America}
+}
+
+@article{takata1990english,
+  title={English consonant recognition in noise and in reverberation by Japanese and American listeners},
+  author={Takata, Yoji and N{\'a}b{\v{e}}lek, Anna K},
+  journal={The Journal of the Acoustical Society of America},
+  volume={88},
+  number={2},
+  pages={663--666},
+  year={1990},
+  publisher={Acoustical Society of America}
 }
 
  @Article{loo2014stringdist,
@@ -390,6 +415,17 @@
   publisher={Taylor \& Francis}
 }
 
+@article{barr2013random,
+  title={Random effects structure for confirmatory hypothesis testing: Keep it maximal},
+  author={Barr, Dale J and Levy, Roger and Scheepers, Christoph and Tily, Harry J},
+  journal={Journal of memory and language},
+  volume={68},
+  number={3},
+  pages={255--278},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @article{schwartz1996l2,
   title={L2 cognitive states and the full transfer/full access model},
   author={Schwartz, Bonnie D and Sprouse, Rex A},
@@ -465,6 +501,39 @@
   year={2005}
 }
 
+@article{valente2018does,
+  title={Does phonological overlap of cognate words modulate cognate acquisition and processing in developing and skilled readers?},
+  author={Valente, Daniela and Ferr{\'e}, Pilar and Soares, Ana and Rato, Anabela and Comesa{\~n}a, Montserrat},
+  journal={Language Acquisition},
+  volume={25},
+  number={4},
+  pages={438--453},
+  year={2018},
+  publisher={Taylor \& Francis}
+}
+
+@article{midgley2011effects,
+  title={Effects of cognate status on word comprehension in second language learners: An ERP investigation},
+  author={Midgley, Katherine J and Holcomb, Phillip J and Grainger, Jonathan},
+  journal={Journal of Cognitive Neuroscience},
+  volume={23},
+  number={7},
+  pages={1634--1647},
+  year={2011},
+  publisher={MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
+@article{chen1989patterns,
+  title={Patterns of lexical processing in a nonnative language.},
+  author={Chen, Hsuan-Chih and Leung, Yuen-Sum},
+  journal={Journal of Experimental Psychology: Learning, memory, and cognition},
+  volume={15},
+  number={2},
+  pages={316},
+  year={1989},
+  publisher={American Psychological Association}
+}
+
 @article{chen2007erp,
   title={ERP signatures of subject--verb agreement in L2 learning},
   author={Chen, Lang and Shu, HUA and Liu, Youyi and Zhao, Jingjing and Li, Ping},
@@ -496,6 +565,13 @@
   pages={68--74},
   year={2009},
   publisher={Elsevier}
+}
+
+@book{gelman2006data,
+  title={Data analysis using regression and multilevel/hierarchical models},
+  author={Gelman, Andrew and Hill, Jennifer},
+  year={2006},
+  publisher={Cambridge university press}
 }
 
 @article{zawiszewski2011language,
